client/src/index.scss
/** We must specify variables before importing bootstrap in order to customize the generated css */

$enable-shadows: true;
// $enable-gradients: true;

@import '~bootstrap/scss/bootstrap';
// @import '~react-bootstrap-table-next/dist/react-bootstrap-table2.min.css';
// @import '~react-bootstrap-table2-paginator/dist/react-bootstrap-table2-paginator.min.css';
// @import '~react-bootstrap-table2-filter/dist/react-bootstrap-table2-filter.min.css';

// @media (min-width: 1600px) {
//   .container {
//     min-width: 1440px;
//   }
// }

/** Default Overrides **/

a {
  //color: rgb(0, 140, 186);
  color: rgb(0, 126, 167);
  text-decoration: none;
}

label {
  font-weight: bold;
  margin-bottom: 0;
}

label.required {
  font-weight: bold;
}

label.required::after {
  content: '*';
  color: red;
}

label.disabled {
  cursor: not-allowed;
}

a:hover,
a:focus {
  text-decoration: underline;
}

/** Bootstrap Overrides **/

.bg-primary-lighter {
  background-color: #d9e8f6;
}

.bg-primary-light {
  background-color: #63a4ff;
}

.bg-primary {
  background-color: #1976d2 !important;
}

.bg-secondary {
  background-color: #ffffff !important;
}

.bg-egg {
  background-color: #f7f5f4;
}

.bg-primary-vivid {
  background-color: #0050d8;
}

.bg-primary-dark {
  background-color: #004ba0;
}

.bg-primary-darker {
  background-color: #1b1b1b;
}

.btn:disabled {
  cursor: not-allowed;
}

.btn-primary-gradient {
  color: #fff;
  background: #007bff linear-gradient(180deg, #268fff, #007bff) repeat-x !important;
  border-color: #007bff;
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),
    0 1px 1px rgba(0, 0, 0, 0.075);
}

.btn-silver {
  // background-color:#D3D3D3;
  background-image: linear-gradient(#ffffff, #eeeeee);
  color: black;
  border-color: #dee2e6;
}

.btn-silver:hover {
  background-image: linear-gradient(#ffffff, #eeeeee);
  color: black;
  border-color: #dee2e6;
}

.btn-silver:active {
  background-image: linear-gradient(#ffffff, #e4e4e4) !important;
  color: black !important;
  border-color: #dee2e6 !important;
}

.btn-collapse {
  background-color: white;
  border: none;
}

.btn-collapse:focus {
  outline: none;
}

.btn.btn-link {
  // color: rgb(0, 140, 186);
  color: rgb(0, 126, 167);
}

.btn.btn-link:active,
.btn.btn-link:not(:disabled):not(.disabled):active {
  border: none;
  box-shadow: none;
}

.text-orange {
  color: orange !important;
}

.text-secondary {
  color: #fafafa !important;
}

.text-green {
  color: #2cc799 !important;
}

.flex-shrink-auto {
  flex: 0 1 auto;
  width: auto;
}

.flex-grow-auto {
  flex: 1 0 auto;
  width: auto;
}

.nav-pills.nav-pills-inverse {
  .nav-link {
    color: white;
  }

  .nav-link.active {
    background-color: #162e51;
  }
}

.nav-pills.nav-pills-custom {
  .nav-link {
    color: white;
  }

  .nav-link {
    background-color: #1a4480;
    opacity: 0.7;
  }

  .nav-link.active {
    // background-color: #e47833;
    opacity: 1;
  }
}

.nav-tabs > .nav-item {
  // font-weight: 600;
  color: black;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  font-weight: 600;
}

.nav-tabs .nav-link.active {
  color: black !important;
}

.nav-tabs .nav-link.active:after {
  content: '';
  display: block;
  padding-top: 2px;
  width: 100%;
  border-bottom: 3px solid #2cc799 !important;
  margin-bottom: -5px;
}

.nav-tabs {
  margin-bottom: -1px;
  border: 0;
  :hover {
    border-bottom: 0;
  }
}

/** Common **/

.tab-pane {
  border: 1px solid #dee2e6;
}

.tab-pane-bordered {
  border: 1px solid #dee2e6;
}

.custom-control-label {
  font-weight: 400;
  cursor: pointer;
}

.opacity-50 {
  opacity: 0.5;
}

.c-pointer {
  cursor: pointer;
}

.c-not-allowed {
  cursor: not-allowed;
}

.pointer-events-all {
  pointer-events: all;
}

.pointer-events-none {
  pointer-events: none;
}

.link {
  cursor: pointer;
  text-decoration: underline;
  font-weight: 600;
  color: #595959 !important;
  opacity: 0.8;
}

.link:hover {
  color: #444 !important;
  text-decoration: underline !important;
}

.small-link {
  font-size: 0.8rem;
  font-weight: 600;
  color: #007bff !important;
  text-decoration: none;
  cursor: pointer;
}

.small-link:hover {
  text-decoration: underline !important;
}

select.form-control-sm {
  padding-right: 0;
}

.input-group > .form-control::placeholder {
  font-size: 10pt !important;
}

.form-control {
  box-shadow: none;
}

.form-control::-webkit-input-placeholder {
  color: #aaa;
} /* WebKit, Blink, Edge */

.form-control:-moz-placeholder {
  color: #aaa;
} /* Mozilla Firefox 4 to 18 */

.form-control::-moz-placeholder {
  color: #aaa;
} /* Mozilla Firefox 19+ */

.form-control:-ms-input-placeholder {
  color: #aaa;
} /* Internet Explorer 10-11 */

.form-control::-ms-input-placeholder {
  color: #aaa;
} /* Microsoft Edge */

// custom popup tooltip for manhattan plot, qq-plot, and heatmap

.popup-tooltip {
  background-color: white;
  border-radius: 0.25rem;
  padding: 0.5rem 1rem;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
  opacity: 0.9;
}

.hovertext {
  opacity: 0.8;
}

